--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ DATABASE_URL="postgresql://user:password@localhost:5432/mini_crm"
 AUTH_SECRET="generate-dengan-openssl-rand-base64-32"
 AUTH_URL="http://localhost:3000"
 
+# AI (Gemini)
+GEMINI_API_KEY=""
+GEMINI_MODEL="gemini-2.5-flash"
+
 # Node
 NODE_ENV="development"
