--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "dummy:ai": "tsx prisma/generate-ai-dummy.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
