feat: optimize NVIDIA NIM routing and update documentation
- Implement faster NIM API routing logic in ai-chat service
- Update README with latest integration details
- Add NIM configuration to .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,13 @@ DATABASE_URL="postgresql://user:password@localhost:5432/mini_crm"
 AUTH_SECRET="generate-dengan-openssl-rand-base64-32"
 AUTH_URL="http://localhost:3000"
 
-# AI (Gemini)
-GEMINI_API_KEY=""
-GEMINI_MODEL="gemini-2.5-flash"
+# AI (NVIDIA NIM / OpenAI-compatible)
+AI_API_KEY=""
+AI_BASE_URL="https://integrate.api.nvidia.com/v1"
+AI_MODEL_FAST="meta/llama-3.1-8b-instruct"
+AI_MODEL_SMART="meta/llama-3.1-70b-instruct"
+# Optional global override (if set, this model is used for all requests)
+AI_MODEL=""
 
 # Node
 NODE_ENV="development"
