--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,7 @@ AUTH_URL="http://localhost:3000"
 # AI (NVIDIA NIM / OpenAI-compatible)
 AI_API_KEY=""
 AI_BASE_URL="https://integrate.api.nvidia.com/v1"
-AI_MODEL_FAST="meta/llama-3.1-8b-instruct"
-AI_MODEL_SMART="meta/llama-3.1-70b-instruct"
-# Optional global override (if set, this model is used for all requests)
-AI_MODEL=""
+AI_MODEL="meta/llama-3.1-8b-instruct"
 
 # Node
 NODE_ENV="development"
