--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.4.0",
     "typeorm": "^0.3.28",
+    "typescript-language-server": "^5.1.3",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
   },
