--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.4.0",
